added endpoints to create and find by id project
