# app/serializers/project_serializer.rb
@@ -1,0 +1,3 @@
+class ProjectSerializer < ActiveModel::Serializer
+  attributes :id, :name, :description, :status, :user_id, :created_at
+end
